--- a/web_src/index.html
+++ b/web_src/index.html
@@ -8,20 +8,37 @@
 		<meta http-equiv="Content-Type" content="text/html; charset=utf8"/>
 		<meta name="apple-mobile-web-app-capable" content="yes"/>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+
+		<!-- Cordova -->
+        <script type="text/javascript" src="cordova.js"></script>
+
 		<!-- css -->
 		<link href="build/enyo.css" rel="stylesheet"/>
 		<link href="build/app.css" rel="stylesheet"/>
+
 		<!-- js -->
 		<script src="build/enyo.js"></script>
 		<script src="build/app.js"></script>
 	</head>
 	<body class="enyo-unselectable">
-		<script>
-			if (!window.App) {
+		<script type="text/javascript">
+			if (!window.CordovaListener) {
 				alert('No application build found, redirecting to debug.html.');
 				location = 'debug.html';
 			}
-			new App().renderInto(document.body);
+
+			if (navigator.userAgent.match(/(iPhone|iPod|iPad|Android)/)) {
+
+				new CordovaListener();		        
+
+			} else {
+
+				myApp = new MyApp();
+				myApp.renderInto(document.body);
+			}
+
 		</script>
 	</body>
 </html>
+
+
